Fix text alignment on fuel use chart

--- a/src/styles/main/_scorecard.scss
+++ b/src/styles/main/_scorecard.scss
@@ -524,7 +524,6 @@ $steam-color: #f7c34e;
 
     .callout-text {
       text {
-        dominant-baseline: central;
         fill: $medium-gray;
         text-transform: uppercase;
 
